--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,12 @@ dependencies {
     implementation 'androidx.room:room-compiler:2.4.2'
     implementation 'androidx.room:room-common:2.4.2'
     implementation 'androidx.room:room-ktx:2.4.2'
+
+    def lfccl_vers = "2.5.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lfccl_vers"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lfccl_vers"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lfccl_vers"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
