--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation 'androidx.room:room-common:2.4.2'
     implementation 'androidx.room:room-ktx:2.4.2'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     def lfccl_vers = "2.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lfccl_vers"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lfccl_vers"
