--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,16 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+apply plugin: 'kotlin-kapt'
+
 android {
     namespace 'fr.iut.tsf'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "fr.iut.tsf"
-        minSdk 21
-        targetSdk 32
+        minSdk 26
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -30,27 +32,29 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.room:room-compiler:2.4.2'
-    implementation 'androidx.room:room-common:2.4.2'
-    implementation 'androidx.room:room-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation "androidx.room:room-common:2.5.0"
+    implementation "androidx.room:room-ktx:2.5.0"
+    kapt "androidx.room:room-compiler:2.5.0"
+
+    implementation("androidx.fragment:fragment:1.5.5")
+    implementation("androidx.fragment:fragment-ktx:1.5.5")
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.cardview:cardview:1.0.0"
 
-    def lfccl_vers = "2.5.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lfccl_vers"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lfccl_vers"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lfccl_vers"
-
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
