--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     implementation "androidx.room:room-common:2.5.0"
     implementation "androidx.room:room-ktx:2.5.0"
+    implementation 'androidx.databinding:baseLibrary:3.2.0-alpha11'
     kapt "androidx.room:room-compiler:2.5.0"
 
     implementation("androidx.fragment:fragment:1.5.5")
@@ -59,5 +60,4 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-
 }
