--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
 }
 
@@ -43,7 +44,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     implementation "androidx.room:room-common:2.5.0"
     implementation "androidx.room:room-ktx:2.5.0"
-    implementation 'androidx.databinding:baseLibrary:3.2.0-alpha11'
     kapt "androidx.room:room-compiler:2.5.0"
 
     implementation("androidx.fragment:fragment:1.5.5")
